--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ihiker",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,6 +11,7 @@
     "@supabase/supabase-js": "^2.39.3"
   },
   "devDependencies": {
+    "typescript": "^5.3.3",
     "vite": "^5.0.11"
   }
 }
